bug fix for video expanding with menus collapsing

--- a/src/components/Chatbox/Chatbox.scss
+++ b/src/components/Chatbox/Chatbox.scss
@@ -43,6 +43,8 @@
 }
 
 .chatbox-content {
+  height: 90vh;
+  overflow-y: auto;
   padding: 0rem 1rem;
   background-color: $input-bg-color;
   color: white;
@@ -66,7 +68,7 @@
   }
 
   .messages {
-    height: 860px;
+    flex-grow: 1;
     overflow-y: auto;
     background: $input-bg-color;
     border: 2px solid $input-border-color;
